--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,15 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation "androidx.sqlite:sqlite:2.1.0"
 
+    //room for database (used in notepad)
+    implementation 'androidx.room:room-runtime:2.2.6'
+    annotationProcessor 'androidx.room:room-compiler:2.2.6'
+
+    //Support for different screen sizes
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    //rounded imageview
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
 }
