--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Productiva">
         <activity android:name=".ToDoSplash"></activity>
         <activity android:name=".reminder" />
         <activity android:name=".timer" />
-        <activity android:name=".notepad" />
+        <activity android:name=".notepad"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".ToDoList">
 
             <!-- <intent-filter> -->
@@ -20,6 +23,9 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
+        <activity android:name=".NoteActivities.noteCreateActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".Dashboard" />
         <activity android:name=".MainActivity">
             <intent-filter>
