--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,17 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.sqlite:sqlite:2.1.0"
 
-    //room for database (used in notepad)
+    //room for database (used in Notepad)
     implementation 'androidx.room:room-runtime:2.3.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
@@ -51,5 +50,8 @@ dependencies {
 
     //rounded imageview
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //Horizontal number picker
+    implementation 'io.github.ShawnLin013:number-picker:2.4.13'
 
 }
